Fixing firefox scrollbar from displaying when not needed

--- a/party-game-ui/src/App.css
+++ b/party-game-ui/src/App.css
@@ -618,7 +618,7 @@ input[type="text"].chat-input {
 }
 
 .scroll-flex>* {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .typography-left-align {
